--- a/wordle/interfaz/templates/juego.html
+++ b/wordle/interfaz/templates/juego.html
@@ -2,21 +2,322 @@
 {%  block title%} wordle {%endblock%}
 
 
+
+
 {%block body%}
-<nav class="navbar bg-body-tertiary">
+
+<!--Barra de navegaciòn-->
+<nav class="navbar navbar-custom">
   <div class="container-fluid">
     <a class="navbar-brand" href="#">
-      <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/b/bf/Escudo_Universidad_de_Medellin.svg/1200px-Escudo_Universidad_de_Medellin.svg.png" alt="Logo" width="90" height="80" class="d-inline-block align-text-top">
-      Wordle UdeM
+         <div class="d-flex align-items-center">
+             <div style="background-color: white; border-radius: 50px">
+                 <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/b/bf/Escudo_Universidad_de_Medellin.svg/1200px-Escudo_Universidad_de_Medellin.svg.png" alt="Logo" width="90" height="80" class="d-inline-block align-text-top" >
+             </div>
+         </div>
     </a>
+    <h4 class="mx-auto" style="color: white; "> Wordle UdeM</h4>
 
-    <!-- Primer botón -->
-    <button class="btn btn-primary"></button>
+    <button type="button" class="btn btn-tall btn-dark">
+        <div class="button">
+            <div class="circle-container">
+                <img src="https://icones.pro/wp-content/uploads/2021/05/icone-point-d-interrogation-question-noir.png"  width="44"  height="44" class="d-inline-block align-text-top">
+            </div>
+        </div>
+    </button>
 
-    <!-- Segundo botón -->
-    <button class="btn btn-primary "></button>
+    <button type="button" class="btn btn-tall btn-dark">
+        <div class="button">
+            <div class="circle-container">
+                <img src="https://cdn.icon-icons.com/icons2/3386/PNG/512/signal_growth_analysis_report_data_graph_chart_statistic_icon_212638.png"
+                     width="39" height="39" class="d-inline-block align-text-top">
+            </div>
+        </div>
+    </button>
   </div>
 </nav>
+
+<div class="container-fluid">
+  <div class="row"><br></div>
+
+    <div class="row justify-content-center">
+        <div class="row col-md-4" >
+            <div class="col-2">
+                <input type="text" maxlength="1" class="casilla">
+            </div>
+            <div class="col-2">
+                <input type="text" maxlength="1" class="casilla">
+            </div>
+            <div class="col-2">
+                <input type="text" maxlength="1" class="casilla">
+            </div>
+            <div class="col-2">
+                <input type="text" maxlength="1" class="casilla">
+            </div>
+            <div class="col-2">
+                <input type="text" maxlength="1" class="casilla">
+            </div>
+        </div>
+
+    </div>
+    <div class="row justify-content-center">
+        <div class="row col-md-4"  >
+            <div class="col-2">
+                <input type="text" maxlength="1" class="casilla">
+            </div>
+            <div class="col-2">
+                <input type="text" maxlength="1" class="casilla">
+            </div>
+            <div class="col-2">
+                <input type="text" maxlength="1" class="casilla">
+            </div>
+            <div class="col-2">
+                <input type="text" maxlength="1" class="casilla">
+            </div>
+            <div class="col-2">
+                <input type="text" maxlength="1" class="casilla">
+            </div>
+        </div>
+
+    </div>
+    <div class="row justify-content-center">
+        <div class="row col-md-4"  >
+            <div class="col-2 ">
+                <input type="text" maxlength="1" class="casilla">
+            </div>
+            <div class="col-2">
+                <input type="text" maxlength="1" class="casilla">
+            </div>
+            <div class="col-2">
+                <input type="text" maxlength="1" class="casilla">
+            </div>
+            <div class="col-2">
+                <input type="text" maxlength="1" class="casilla">
+            </div>
+            <div class="col-2">
+                <input type="text" maxlength="1" class="casilla">
+            </div>
+        </div>
+
+    </div>
+    <div class="row justify-content-center">
+        <div class="row col-md-4">
+            <div class="col-2">
+                <input type="text" maxlength="1" class="casilla">
+            </div>
+            <div class="col-2">
+                <input type="text" maxlength="1" class="casilla">
+            </div>
+            <div class="col-2">
+                <input type="text" maxlength="1" class="casilla">
+            </div>
+            <div class="col-2">
+                <input type="text" maxlength="1" class="casilla">
+            </div>
+            <div class="col-2">
+                <input type="text" maxlength="1" class="casilla">
+            </div>
+        </div>
+
+    </div>
+    <div class="row justify-content-center">
+        <div class="row col-md-4">
+            <div class="col-2 ">
+                <input type="text" maxlength="1" class="casilla">
+            </div>
+            <div class="col-2">
+                <input type="text" maxlength="1" class="casilla">
+            </div>
+            <div class="col-2">
+                <input type="text" maxlength="1" class="casilla">
+            </div>
+            <div class="col-2">
+                <input type="text" maxlength="1" class="casilla">
+            </div>
+            <div class="col-2">
+                <input type="text" maxlength="1" class="casilla">
+            </div>
+        </div>
+
+    </div>
+    <div class="row justify-content-center">
+        <div class="row col-md-4"  >
+            <div class="col-2">
+                <input type="text" maxlength="1" class="casilla">
+            </div>
+            <div class="col-2">
+                <input type="text" maxlength="1" class="casilla">
+            </div>
+            <div class="col-2">
+                <input type="text" maxlength="1" class="casilla">
+            </div>
+            <div class="col-2">
+                <input type="text" maxlength="1" class="casilla">
+            </div>
+            <div class="col-2">
+                <input type="text" maxlength="1" class="casilla">
+            </div>
+        </div>
+
+    </div>
+</div>
+
+
+<div class="teclado">
+  <div class="row"><br></div>
+  <div class="row"><br></div>
+
+
+    <div class="row justify-content-center">
+        <div class="row col-md-6" >
+            <div class="col-1">
+                 <button type="button" class="btn btn-tall">
+                     <h3>Q</h3>
+                 </button>
+            </div>
+            <div class="col-1">
+                 <button type="button" class="btn btn-tall">
+                     <h3>W</h3>
+                 </button>
+            </div>
+            <div class="col-1">
+                 <button type="button" class="btn btn-tall">
+                     <h3>E</h3>
+                 </button>
+            </div>
+            <div class="col-1">
+                 <button type="button" class="btn btn-tall">
+                     <h3>R</h3>
+                 </button>
+            </div>
+            <div class="col-1">
+                 <button type="button" class="btn btn-tall">
+                     <h3>T</h3>
+                 </button>
+            </div>
+            <div class="col-1">
+                 <button type="button" class="btn btn-tall">
+                     <h3>Y</h3>
+                 </button>
+            </div>
+            <div class="col-1">
+                 <button type="button" class="btn btn-tall">
+                     <h3>U</h3>
+                 </button>
+            </div>
+            <div class="col-1">
+                 <button type="button" class="btn btn-tall">
+                     <h3>I</h3>
+                 </button>
+            </div>
+            <div class="col-1">
+                 <button type="button" class="btn btn-tall">
+                     <h3>O</h3>
+                 </button>
+            </div>
+            <div class="col-1">
+                 <button type="button" class="btn btn-tall">
+                     <h3>P</h3>
+                 </button>
+            </div>
+
+        </div>
+
+    </div>
+    <div class="row justify-content-center">
+        <div class="row col-md-6" >
+            <div class="col-1">
+                 <button type="button" class="btn btn-tall">
+                 </button>
+            </div>
+            <div class="col-1">
+                 <button type="button" class="btn btn-tall">
+                 </button>
+            </div>
+            <div class="col-1">
+                 <button type="button" class="btn btn-tall">
+                 </button>
+            </div>
+            <div class="col-1">
+                 <button type="button" class="btn btn-tall">
+                 </button>
+            </div>
+            <div class="col-1">
+                 <button type="button" class="btn btn-tall">
+                 </button>
+            </div>
+            <div class="col-1">
+                 <button type="button" class="btn btn-tall">
+                 </button>
+            </div>
+            <div class="col-1">
+                 <button type="button" class="btn btn-tall">
+                 </button>
+            </div>
+            <div class="col-1">
+                 <button type="button" class="btn btn-tall">
+                 </button>
+            </div>
+            <div class="col-1">
+                 <button type="button" class="btn btn-tall">
+                 </button>
+            </div>
+            <div class="col-1">
+                 <button type="button" class="btn btn-tall">
+                 </button>
+            </div>
+
+        </div>
+
+    </div>
+    <div class="row justify-content-center">
+        <div class="row col-md-6" >
+            <div class="col-1">
+                 <button type="button" class="btn btn-tall">
+                 </button>
+            </div>
+            <div class="col-1">
+                 <button type="button" class="btn btn-tall">
+                 </button>
+            </div>
+            <div class="col-1">
+                 <button type="button" class="btn btn-tall">
+                 </button>
+            </div>
+            <div class="col-1">
+                 <button type="button" class="btn btn-tall">
+                 </button>
+            </div>
+            <div class="col-1">
+                 <button type="button" class="btn btn-tall">
+                 </button>
+            </div>
+            <div class="col-1">
+                 <button type="button" class="btn btn-tall">
+                 </button>
+            </div>
+            <div class="col-1">
+                 <button type="button" class="btn btn-tall">
+                 </button>
+            </div>
+            <div class="col-1">
+                 <button type="button" class="btn btn-tall">
+                 </button>
+            </div>
+            <div class="col-1">
+                 <button type="button" class="btn btn-tall">
+                 </button>
+            </div>
+            <div class="col-1">
+                 <button type="button" class="btn btn-tall">
+                 </button>
+            </div>
+
+        </div>
+
+    </div>
+
+</div>
 
 
 {%endblock%}
