--- a/wordle/interfaz/templates/registro.html
+++ b/wordle/interfaz/templates/registro.html
@@ -3,6 +3,33 @@
 
 
 {%block body%}
+<nav class="navbar navbar-custom">
+    <h4 class="mx-auto" style="color: white;"> Wordle UdeM</h4>
+      <br>
+</nav>
+
+<div class="container-fluid custom-container">
+  <div class="d-flex align-items-center ">
+    <div style="background-color: white; border-radius: 50px">
+      <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/b/bf/Escudo_Universidad_de_Medellin.svg/1200px-Escudo_Universidad_de_Medellin.svg.png" alt="Logo" width="90" height="80" class="d-inline-block align-text-top">
+    </div>
+    <h2>Universidad de Medellin</h2>
+  </div>
+</div>
+
+<div class="container-fluid custom-container usuario">
+  <h3>¡Bienvenido!</h3>
+    <br>
+    <p>Por favor ingresa tu nombre:</p>
+    <input type="text" class="nombre">
+    <button type="button" class="iniciar">
+      Iniciar juego
+    </button>
 
 
+
+
+
+
+</div>
 {%endblock%}
