--- a/wordle/interfaz/templates/juego.html
+++ b/wordle/interfaz/templates/juego.html
@@ -38,7 +38,6 @@
 </nav>
 
 <div class="container-fluid">
-  <div class="row"><br></div>
 
     <div class="row justify-content-center">
         <div class="row col-md-4" >
@@ -165,7 +164,6 @@
 
 <div class="teclado">
   <div class="row"><br></div>
-  <div class="row"><br></div>
 
 
     <div class="row justify-content-center">
@@ -228,42 +226,52 @@
         <div class="row col-md-6" >
             <div class="col-1">
                  <button type="button" class="btn btn-tall">
+                     <h3>A</h3>
                  </button>
             </div>
             <div class="col-1">
                  <button type="button" class="btn btn-tall">
+                      <h3>S</h3>
                  </button>
             </div>
             <div class="col-1">
                  <button type="button" class="btn btn-tall">
+                      <h3>D</h3>
                  </button>
             </div>
             <div class="col-1">
                  <button type="button" class="btn btn-tall">
+                      <h3>F</h3>
                  </button>
             </div>
             <div class="col-1">
                  <button type="button" class="btn btn-tall">
+                      <h3>G</h3>
                  </button>
             </div>
             <div class="col-1">
                  <button type="button" class="btn btn-tall">
+                      <h3>H</h3>
                  </button>
             </div>
             <div class="col-1">
                  <button type="button" class="btn btn-tall">
+                      <h3>J</h3>
                  </button>
             </div>
             <div class="col-1">
                  <button type="button" class="btn btn-tall">
+                      <h3>K</h3>
                  </button>
             </div>
             <div class="col-1">
                  <button type="button" class="btn btn-tall">
+                      <h3>L</h3>
                  </button>
             </div>
             <div class="col-1">
                  <button type="button" class="btn btn-tall">
+                      <h3>M</h3>
                  </button>
             </div>
 
@@ -272,46 +280,51 @@
     </div>
     <div class="row justify-content-center">
         <div class="row col-md-6" >
+            <div class="col-2">
+                 <button type="button" class="btn btn-custom">
+                      <h3>ENTER</h3>
+                 </button>
+            </div>
             <div class="col-1">
                  <button type="button" class="btn btn-tall">
+                      <h3>Z</h3>
+                 </button>
+            </div>
+            <div class="col-1">
+                 <button type="button" class="btn btn-tall">
+                      <h3>X</h3>
+                 </button>
+            </div>
+            <div class="col-1">
+                 <button type="button" class="btn btn-tall">
+                      <h3>C</h3>
+                 </button>
+            </div>
+            <div class="col-1">
+                 <button type="button" class="btn btn-tall">
+                      <h3>V</h3>
+                 </button>
+            </div>
+            <div class="col-1">
+                 <button type="button" class="btn btn-tall">
+                      <h3>B</h3>
+                 </button>
+            </div>
+            <div class="col-1">
+                 <button type="button" class="btn btn-tall">
+                      <h3>N</h3>
+                 </button>
+            </div>
+            <div class="col-1">
+                 <button type="button" class="btn btn-tall">
+                      <h3>M</h3>
                  </button>
             </div>
             <div class="col-1">
                  <button type="button" class="btn btn-tall">
                  </button>
             </div>
-            <div class="col-1">
-                 <button type="button" class="btn btn-tall">
-                 </button>
-            </div>
-            <div class="col-1">
-                 <button type="button" class="btn btn-tall">
-                 </button>
-            </div>
-            <div class="col-1">
-                 <button type="button" class="btn btn-tall">
-                 </button>
-            </div>
-            <div class="col-1">
-                 <button type="button" class="btn btn-tall">
-                 </button>
-            </div>
-            <div class="col-1">
-                 <button type="button" class="btn btn-tall">
-                 </button>
-            </div>
-            <div class="col-1">
-                 <button type="button" class="btn btn-tall">
-                 </button>
-            </div>
-            <div class="col-1">
-                 <button type="button" class="btn btn-tall">
-                 </button>
-            </div>
-            <div class="col-1">
-                 <button type="button" class="btn btn-tall">
-                 </button>
-            </div>
+
 
         </div>
 
