--- a/wordle/interfaz/templates/registro.html
+++ b/wordle/interfaz/templates/registro.html
@@ -22,10 +22,9 @@
     <br>
     <p>Por favor ingresa tu nombre:</p>
     <input type="text" class="nombre">
-    <button type="button" class="iniciar">
-      Iniciar juego
-    </button>
-
+  <form action="{{url_for('juego') }}">
+    <button type="submit" class="iniciar">Iniciar Juego</button>
+  </form>
 
 
 
