enlace de las excepciones

--- a/wordle/interfaz/static/css/base.css
+++ b/wordle/interfaz/static/css/base.css
@@ -92,6 +92,15 @@
     height: 42px;
 }
 
+.modal-dialog{
+    background-color: "dark"
+    color: black;
+    width: 500px;
+    heigth: 500px;
+
+
+}
+
 
 
 
